* Make "xxxTag" properties on AspTesters public--map them to HtmlTag
* Add support for auto-postback to RadioButtonTester
* Remove 'Tag' property from AspControlTester; add HtmlTag
* Refer to David Gardiner's code-generation tool in documentation: https://sourceforge.net/projects/nunitaspcodegen/
* Incorporate "Advanced NUnitAsp" video into documentation page


Changes in CVS:
Produced by Jim Shore.
* Added FAQ: How to test sites that require authentication.  Credit to Jim Shore.
* Removed NUnit requirement.  NUnitAsp now works with any test framework.  Credit to Jim Shore.
* Augmented Browser property with HttpClient.Default static property.  Credit to Jim Shore.
* Augmented CurrentWebForm property with single-parameter constructor for testers.  Credit to Jim Shore.
* Created NUnitAdapter.cs file that provides backwards compatibility and quick-start for NUnit users.  Credit Jim Shore.
* Created new migration guide for v1.6.  Removed old NUnit 2.0 migration guide.  Credit to Jim Shore.
* Renamed WebForm to WebFormTester.  Credit to Jim Shore.
* Added "Variables" property to WebFormTester and created FormVariables class to enable direct control and access to form variables.  Credit to Jim Shore.
* Added support for multiple forms.  Credit to Jim Shore.
* Added ability for tests to submit and post-back forms.  Credit to Jim Shore.
* Updated FAQ: How to compile with NAnt under .NET 1.1.  Credit to Cory Foy and Ted Husted.
* Changed LinkButtonTester to NOT check if the link is disabled.  Credit to Jim Shore.
* Added WebAssert.TableContainsRow.  Credit to Jim Shore.
* Added HtmlButtonTester.  Credit to Jim Shore.
* Added HtmlInputButtonTester.  Credit to Jim Shore.
* Added HtmlInputImageTester.  Credit to Jim Shore.
* Added HtmlInputRadioButtonTester.  Credit to Jim Shore.


Changes in NUnitAsp 1.5.1:
Produced by Jim Shore and Levi Khatskevitch.
* Added PostBack() overload that takes actual event target and argument.  Credit to Jim Shore.