@@ -99,7 +99,7 @@
 
             <h2>Instructors:</h2>
 
-            <p><b>James Shore</b> created today's NUnitAsp while leading a team in the beta days of .NET.  Unwilling to develop without the safety net of test-driven development, he took over an Brian Knowles' open-source application and made substantial improvements.  Since releasing NUnitAsp on SourceForge in 2002, he's seen it grow into an application that's downloaded thousands of times every month.</p>
+            <p><b>James Shore</b> created today's NUnitAsp while leading a team in the beta days of .NET.  Unwilling to develop without the safety net of test-driven development, he took over Brian Knowles' open-source application and made substantial improvements.  Since releasing NUnitAsp on SourceForge in 2002, he's seen it grow into an application that's downloaded thousands of times every month.</p>
 
             <p>James is a leader in the agile software development community.  In addition to producing NUnitAsp, he's the project maintainer for Fit, Ward Cunningham's tool for agile requirements testing and collaboration.  In 2005, the Agile Alliance recognized Jim's contributions with its prestigious <a href="http://www.testing.com/cgi-bin/blog/2005/07/30#gordon-pask">Gordon Pask Award</a> for Contributions to Agile Practice.  James has been coaching teams in agile development since 1999 and specializes in providing agile development consulting to the Pacific Northwest.  Find his articles and blog on his website, <a href="http://www.jamesshore.com">http://www.jamesshore.com</a>.</p>
 
