@@ -32,14 +32,32 @@ namespace NUnit.Extensions.Asp.HtmlTester
 	public class HtmlAnchorTester : HtmlControlTester
 	{
 		/// <summary>
-		/// Create the tester and link it to an ASP.NET control.
+		/// Create a tester for an HTML tag.  Use this constructor
+		/// for testing most tags.
 		/// </summary>
-		/// <param name="aspId">The ID of the control to test (look in the page's ASP.NET source code for the ID).</param>
-		/// <param name="container">A tester for the control's container.  (In the page's ASP.NET
-		/// source code, look for the tag that the control is nested in.  That's probably the
-		/// control's container.  Use CurrentWebForm if the control is just nested in the form tag.)</param>
-		/// <param name="runAtServer">Tells tester whether the control under test is running on the server side.</param>
-		public HtmlAnchorTester(string aspId, Tester container, bool runAtServer) : base(aspId, container, runAtServer)
+		/// <param name="htmlId">The ID of the control to test (look in the
+		/// page's ASP.NET source code for the ID).</param>
+		public HtmlAnchorTester(string htmlId) : base(htmlId)
+		{
+		}
+
+		/// <summary>
+		/// Create a tester for a server-side HTML control.  Use this constructor
+		/// when the HTML tag you are testing has the "runat='server'" attribute.
+		/// </summary>
+		/// <param name="aspId">The ID of the control to test (look in the
+		/// page's ASP.NET source code for the ID).</param>
+		/// <param name="container">A tester for the control's container.  
+		/// (In the page's ASP.NET source code, look for the tag that the
+		/// control is nested in.  That's probably the control's
+		/// container.  Use "CurrentWebForm" if you're not sure; it will
+		/// probably work.)</param>
+		public HtmlAnchorTester(string aspId, Tester container) : base(aspId, container)
+		{
+		}
+
+		[Obsolete("Use HtmlAnchorTester(aspId, container) or HtmlAnchorTester(aspId) instead")]
+		public HtmlAnchorTester(string aspId, Tester container, bool runAtServer) : this(aspId, container)
 		{
 		}
 
