@@ -23,6 +23,7 @@ Before release:
 * Remove 'Tag' property from AspControlTester; add HtmlTag
 * Refer to David Gardiner's code-generation tool in documentation: https://sourceforge.net/projects/nunitaspcodegen/
 * Incorporate "Advanced NUnitAsp" video into documentation page
+* Fix bug (credit to Aaron Jenson): return new HtmlInputButtonTester(HtmlId, this.Form);
 
 
 Changes in CVS:
